language/move-lang/tests/move_check/parser/struct_type_copyable.exp
error: 

   ┌── tests/move_check/parser/struct_type_copyable.move:3:17 ───
   │
 3 │     struct S<T: copy> { }
   │                 ^^^^ Unexpected token: 'copy'
   ·
 3 │     struct S<T: copy> { }
   │                 ---- Expected: 'copyable', 'resource'
   │

